# focus

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  COMMIT_MESSAGE_TRAY_FIX.txt  ELECTRON_MIGRATION.md  GITHUB_ACTIONS_COMPLETE.md  LICENSE  MVP_Milestone_Plan.md  README.md  Specifications.md  TESTING_CHECKLIST.md  flutter_rust_bridge.yaml  package-lock.json  setup.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  pr-build.yml
core/: Cargo.toml
core/src/: lib.rs
docs/: CURRENT_STATUS.md  ELECTRON_SUCCESS_SUMMARY.md  FINAL_POLISH_COMPLETE.md  GITHUB_ACTIONS_SETUP.md  GITHUB_ACTIONS_SUMMARY.md  HOW_TO_RELEASE.md  LINUX_BUILDS.md  MIGRATION_SUMMARY.md  MVP_Milestone_Plan.md  PAUSE_BREAK_SYSTEM.md  Pomodoro_Progress_Dots_Specification.md  README_COMPARISON.md  README_UPDATES_LINUX.md  REFLECTION_PERIOD_ANIMATION.md  RELEASE_CHECKLIST_v0.1.0.md  RELEASE_NOTES_v0.1.0.md  SESSION_SUMMARY_2025-10-13.md  SESSION_SUMMARY_2026-05-11.md  SYSTEM_TRAY_FIX.md  SYSTEM_TRAY_FIX_SUMMARY.md  SYSTEM_TRAY_ICON_FIX_FINAL.md  Specifications.md
docs/milestones/: MILESTONE_DATABASE.md  MILESTONE_POLISH.md  MILESTONE_RUST_CORE.md
electron-app/: DEVELOPMENT.md  README.md  TESTING.md  check-process.js  core_stub.js  create_icon.js  db.js  generate_icons.js  index.html  main.js  package-lock.json  package.json  renderer.js  settings.css  settings.html  settings.js  styles.css  toolbar.css  toolbar.html  toolbar.js
electron-app/native/: Cargo.toml
electron-app/native/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
