[package]
name = "focus_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
flutter_rust_bridge = "=2.11.1"
thiserror = "1"

[features]
default = []
