[package]
name = "focus_core_node"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }

